--- a/src/theme/link.css
+++ b/src/theme/link.css
@@ -2,3 +2,7 @@ a {
     text-decoration: none;
     color: initial;
 }
+
+.ativo, .ativo > .MuiButtonBase-root > .MuiListItemIcon-root {
+    color: var(--azul600) !important;
+}
