Fix typography errors

--- a/src/theme/link.css
+++ b/src/theme/link.css
@@ -4,5 +4,5 @@ a {
 }
 
 .ativo, .ativo > .MuiButtonBase-root > .MuiListItemIcon-root {
-    color: var(--azul600) !important;
+    color: var(--azul600);
 }
