Add new Local Storage and Menu Superior tests

--- a/src/theme/cores.css
+++ b/src/theme/cores.css
@@ -8,6 +8,7 @@
     --cinza-secundario: #DCDBDC;
     --azul600: #1E88E5;
     --branco: white;
+    --vermelho400: #EF5350;
 }
 
 .principal700-fg {
