--- a/src/theme/cores.css
+++ b/src/theme/cores.css
@@ -7,6 +7,7 @@
     --icone-contraste: #616161;
     --cinza-secundario: #DCDBDC;
     --azul600: #1E88E5;
+    --vermelho600: #e53935;
     --branco: white;
     --vermelho400: #EF5350;
 }
