Adicionando estilo para estado desabilitado

--- a/src/theme/cores.css
+++ b/src/theme/cores.css
@@ -9,6 +9,7 @@
     --azul600: #1E88E5;
     --vermelho600: #e53935;
     --vermelho400: #EF5350;
+    --desabilitado: #bdbdbd;
 }
 
 .principal700-fg {
