--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -13,7 +13,7 @@
     padding: 32px 54px;
     background: white;
     border-radius: 20px;
-    box-shadow: 0 4px 10px 5px rgba(0, 0, 0, 0.05);;
+    box-shadow: 0 4px 10px 5px rgba(0, 0, 0, 0.05);
 }
 
 .login__titulo {
